# fsnd-fyyur

./: .gitignore  README.md  app.py  config.py  forms.py  models.py  pyproject.toml
migrations/versions/: 09de743ba6be_.py  2aed1f6be306_.py  365e7b274611_.py  57ca9c7a79c3_.py  67be2809bf26_.py  6cf1431a17e2_.py  a4d25ace51de_.py  a944e7eef0d6_.py  f2fb8f1ef8ec_.py
templates/errors/: 400.html
templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_venue.html
templates/pages/: show_artist.html  show_venue.html  shows.html
