[tool.poetry]
name = "yoon-fsnd-fyyur"
version = "0.1.0"
description = "Prototype implementation of an artist booking site"
authors = ["Sangyoon Park <datumvitae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "2.6.0"
babel = "^2.9.0"
SQLAlchemy = "^1.3.22"
postgres = "^3.0.0"
flask = "^1.1.2"
flask-migrate = "^2.5.3"
flask-moment = "^0.11.0"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
